# Testify-Automation

./: .gitignore  README.md  TEST_STRATEGY.md  behave.ini  collect_results.py  config.py  generate_catalog.py  pyproject.toml  requirements.txt  run_tests.sh
.agent/skills/testify-ci-setup/: SKILL.md
.agent/skills/testify-ci-setup/templates/: collect_results.py
.agent/skills/testify-ci-setup/templates/.github/actions/setup-testify/: action.yml
.agent/skills/testify-ci-setup/templates/reports/: dashboard.html
.agent/workflows/: run-tests.md  setup-testify-ci.md
.github/actions/save-dashboard/: action.yml
.github/actions/setup-testify/: action.yml
.github/actions/setup-testify-container/: action.yml
.github/workflows/: test-suite.yml
features/: accessibility.feature  environment.py  performance.feature  regression.feature
features/steps/: __init__.py  accessibility_steps.py  contact_steps.py  home_steps.py  performance_steps.py  portfolio_steps.py  responsive_steps.py
pages/: __init__.py  base_page.py  contact_page.py  home_page.py  responsive_page.py
reports/: catalog.html  dashboard.html  run_history.json
