[project]
name = "testify-automation"
version = "1.0.0"
description = "Automated test suite for artasheskocharyan.com"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "N802",   # function name should be lowercase — Behave steps use decorators
    "N803",   # argument name should be lowercase
]

[tool.ruff.lint.isort]
known-first-party = ["pages", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
